[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-eval-harness"
version = "0.1.0"
description = "Automated evaluation framework for LLM outputs with failure analysis and CI"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Copilot"}]
dependencies = ["requests>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
llm-eval = "llm_eval_harness.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
